--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,17 +9,21 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@improbable-eng/grpc-web": "^0.15.0",
+    "google-protobuf": "^3.21.4",
     "next": "16.0.3",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
   "devDependencies": {
+    "@types/google-protobuf": "^3.15.12",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.17",
     "eslint": "^9",
     "eslint-config-next": "16.0.3",
+    "grpc-tools": "^1.13.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
